pitch: Set seqnum on newly created segment event

https://bugzilla.gnome.org/show_bug.cgi?id=755012